  - A001519 - a(n) = 3*a(n-1) - a(n-2), with a(0) = a(1) = 1.
  - A001700 - a(n) = binomial(2n+1, n+1): number of ways to put n+1 indistinguishable balls into n+1 distinguishable boxes = number of (n+1)-st degree monomials in n+1 variables = number of monotone maps from 1..n+1 to 1..n+1.
  - A001764 - a(n) = binomial(3n,n)/(2n+1) (enumerates ternary trees and also noncrossing trees).
 

## v0.11.4

### Enhancements

 - New module Chunky.Math.Operations
  - summation/3 macro
  - product/3 macro
 - Math
  - is_vampire_number?/1
  - is_double_vampire_number?/1
  - is_prime_vampire_number?/1
  - factor_pairs/2
  - is_in_base?/2
  - length_in_base/2
  - is_pseudo_vampire_number?/1  
  - is_pandigital?/1
  - is_pandigital_in_base?/2
  - is_left_truncatable_prime?/1
  - is_right_truncatable_prime?/1
  - is_left_right_truncatable_prime?/1
  - is_two_sided_prime?/1
  - is_palindromic_prime?1
  - is_emirp_prme?/1
  - is_circular_prime?/1
  - is_weakly_prime?/1
  - rotations/1
  - reverse_number/1
  - is_palindromic?/1
  - is_palindromic_in_base?/2
  - is_strictly_non_palindromic?/1
  - is_carmichael_number?/1
  - is_euler_jacobi_pseudo_prime?/1
  - is_euler_pseudo_prime?/1
  - is_poulet_number?/1
  - is_pseudo_prime?/1
  - coprimes/1
  - coprimes/2
  - is_euler_jacobi_pseudo_prime?/2
  - is_euler_pseudo_prime?/2
  - is_pseudo_prime?/2
  - jacobi_symbol/2
  - legendre_symbol/2
  - to_base/2 now supports any base > 1
  

## v0.11.3

```
OEIS Coverage
        561 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Combinatorics - 7 sequences
        Elixir.Chunky.Sequence.OEIS.Constants - 31 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 93 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 119 sequences
        Elixir.Chunky.Sequence.OEIS.Multiples - 60 sequences
        Elixir.Chunky.Sequence.OEIS.Powers - 47 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences